login/logout modules added
