# python-flask-server/swagger_server/controllers/user_controller.py
@@ -32,6 +32,32 @@ def get_user_details(username):  # noqa: E501
     return 'do some magic!'
 
 
+def login_user(username, password):  # noqa: E501
+    """Logs user into the system
+
+     # noqa: E501
+
+    :param username: The user name for login
+    :type username: str
+    :param password: The password for login in clear text
+    :type password: str
+
+    :rtype: str
+    """
+    return 'do some magic!'
+
+
+def logout_user():  # noqa: E501
+    """Logs out current logged in user session
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
 def update_user(username, body):  # noqa: E501
     """Update user details
 
